# Agentic-Feature-Engineering

./: .gitignore  README.md
feature_engineer/: README.md  config.py  main.py  pyproject.toml  state.py  state_ok.py
feature_engineer/graph/: builder.py
feature_engineer/llm/: naming.py  setup.py  tools.py
feature_engineer/mcp_servers/: arxiv_server.py  arxiv_server_ok.py
feature_engineer/nodes/: execution.py  ingestion.py  planning.py  ranking.py  research.py  research_OK.py  revision.py  routing.py  routing_ok.py  schema_analyzer.py
feature_engineer/output/: sales_enriched.csv
feature_engineer/security/: ast_validator.py
feature_engineer/storage/: database.py  parquet.py
feature_engineer/tests/: test_ast_validator.py  test_nodes_execution.py  test_nodes_routing.py  test_storage.py
feature_engineer/ui/: app.py  history.py
