[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "feature-engineer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain",
    "langchain-core",
    "langchain-community",
    "gradio",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "requests",
    "aiosqlite",
]

[project.scripts]
feature-engineer = "feature_engineer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
